Finalize port to 1.18.2